--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:uCwad0LKRnSRm7cE2wu45WV4C16/vUNo/wW8DOmLPbI=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
