--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE= w3h2
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=lien0701
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
